--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v4
+      - name: Install zsh
+        run: apt-get update -y && apt-get install -y zsh
       - name: 🚀 Build
         env:
           VERSION: ${{ inputs.version }}
