--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
+      - name: ⤵️ Check out code from GitHub  # needed to use GitHub CLI
+        uses: actions/checkout@v4
       - name: ⤵️ Download distribution artifact
         uses: actions/download-artifact@v4
         with:
@@ -22,7 +24,7 @@ jobs:
           path: dist
       - name: ⤴️ Upload release assets
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ github.token }}  # needed to use GitHub CLI
         run: |
           cd dist;
           find . -type f -prune -exec gh release upload ${{ github.event.release.tag_name }} '{}' +
