pass version to release build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
+    with:
+      version: ${{ github.event.release.tag_name }}
   publish-release:
     name: 🚀 Publish 📦 To Release
     needs: build
