add install script (#14)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,14 @@ on:
       - master
 
 jobs:
+  python-checks:
+    strategy:
+      matrix:
+        python-version: ['3.10', 3.11, 3.12]
+    uses: finleyfamily/workflows/.github/workflows/python.checks.yml@master
+    with:
+      disable-tests: true
+      python-version: ${{ matrix.python-version }}
   shellcheck:
     name: shellcheck
     runs-on: ubuntu-latest
