--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,12 @@ venv = ".venv"
 
 [tool.ruff]  # https://docs.astral.sh/ruff/settings/#top-level
 force-exclude = true
-line-length = 120
+line-length = 100
 show-fixes = true
 target-version = "py310"
+
+[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
+docstring-code-format = true
 
 [tool.ruff.lint]  # https://docs.astral.sh/ruff/settings/#lint
 ignore = [
@@ -70,6 +73,9 @@ runtime-evaluated-base-classes = [
   "pydantic.BaseModel",
   "pydantic.BeforeValidator",
 ]
+
+[tool.ruff.lint.pycodestyle]  # https://docs.astral.sh/ruff/settings/#lint_pycodestyle_max-line-length
+max-line-length = 140
 
 [tool.ruff.lint.pydocstyle]  # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 convention = "google"
