resolve ruff lint errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
         "editor.tabSize": 4
     },
     "cSpell.enabled": true,
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/"
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
 }
