--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,3 @@
-default_language_version:
-  node: system
-
 exclude: |
   (?x)^(
     (.*/)?package-lock\.json|
@@ -64,3 +61,7 @@ repos:
     rev: v0.45.0
     hooks:
       - id: markdownlint
+        exclude: |
+          (?x)^(
+            .github/pull_request_template.md
+          )$
